// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer onClick 1`] = `
.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: title;
  justify-self: left;
}

.c7 {
  grid-area: indicator;
}

.c2 {
  display: grid;
  grid-template-areas: "icon title indicator";
  grid-template-rows: auto;
  grid-template-columns: auto 1fr auto;
  gap: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 100%;
}

.c4 {
  background: black;
  height: calc(1em / 16);
  width: 1em;
  margin: 0 calc(1em * 0.35 / 2);
}

.c4::before {
  content: '';
  display: block;
  background: black;
  height: calc(1em / 16);
  width: 1em;
  -webkit-transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
  -ms-transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
  transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
}

.c4::after {
  content: '';
  display: block;
  background: black;
  height: calc(1em / 16);
  width: 1em;
  -webkit-transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
  -ms-transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
  transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
}

.c6 {
  color: black;
}

.c8 {
  margin: 0 0.5em;
  font-size: 0.5em;
  color: black;
  -webkit-transition: -webkit-transform 0.5s ease;
  -webkit-transition: transform 0.5s ease;
  transition: transform 0.5s ease;
  -webkit-transform: scaleX(2) scaleY(-1);
  -ms-transform: scaleX(2) scaleY(-1);
  transform: scaleX(2) scaleY(-1);
}

.c1 {
  width: 100%;
  font: inherit;
  background: transparent;
  padding: 8px 16px;
  border: 0;
}

.c1:hover {
  cursor: pointer;
}

.c9 {
  overflow-y: hidden;
  width: 100%;
  -webkit-transition: max-height 0.5s ease;
  transition: max-height 0.5s ease;
  max-height: 1000px;
}

.c10 {
  position: relative;
  width: 100%;
}

.c11 {
  min-height: 500px;
  background: cyan;
}

<div
  className="c0"
  width="100%"
>
  <button
    className="c1"
    color="black"
    onClick={[Function]}
    title=""
  >
    <div
      className="c2"
      rows={
        [
          "auto",
        ]
      }
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="black"
        />
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
          color="black"
        />
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
          color="black"
        >
          ▼
        </div>
      </div>
    </div>
  </button>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <div
        className="c11"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer simple 1`] = `
.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: title;
  justify-self: left;
}

.c7 {
  grid-area: indicator;
}

.c2 {
  display: grid;
  grid-template-areas: "icon title indicator";
  grid-template-rows: auto;
  grid-template-columns: auto 1fr auto;
  gap: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 100%;
}

.c4 {
  background: black;
  height: calc(1em / 16);
  width: 1em;
  margin: 0 calc(1em * 0.35 / 2);
}

.c4::before {
  content: '';
  display: block;
  background: black;
  height: calc(1em / 16);
  width: 1em;
  -webkit-transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
  -ms-transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
  transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
}

.c4::after {
  content: '';
  display: block;
  background: black;
  height: calc(1em / 16);
  width: 1em;
  -webkit-transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
  -ms-transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
  transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
}

.c6 {
  color: black;
}

.c8 {
  margin: 0 0.5em;
  font-size: 0.5em;
  color: black;
  -webkit-transition: -webkit-transform 0.5s ease;
  -webkit-transition: transform 0.5s ease;
  transition: transform 0.5s ease;
  -webkit-transform: scaleX(2);
  -ms-transform: scaleX(2);
  transform: scaleX(2);
}

.c1 {
  width: 100%;
  font: inherit;
  background: transparent;
  padding: 8px 16px;
  border: 0;
}

.c1:hover {
  cursor: pointer;
}

.c9 {
  overflow-y: hidden;
  width: 100%;
  -webkit-transition: max-height 0.5s ease;
  transition: max-height 0.5s ease;
  max-height: 0px;
}

.c10 {
  position: relative;
  width: 100%;
}

.c11 {
  min-height: 500px;
  background: cyan;
}

<div
  className="c0"
  width="100%"
>
  <button
    className="c1"
    color="black"
    onClick={[Function]}
    title=""
  >
    <div
      className="c2"
      rows={
        [
          "auto",
        ]
      }
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="black"
        />
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
          color="black"
        />
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
          color="black"
        >
          ▼
        </div>
      </div>
    </div>
  </button>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <div
        className="c11"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer with overrides 1`] = `
.c3 {
  grid-area: icon;
}

.c5 {
  grid-area: title;
  justify-self: left;
}

.c7 {
  grid-area: indicator;
}

.c2 {
  display: grid;
  grid-template-areas: "icon title indicator";
  grid-template-rows: auto;
  grid-template-columns: auto 1fr auto;
  gap: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

.c4 {
  background: black;
  height: calc(1em / 16);
  width: 1em;
  margin: 0 calc(1em * 0.35 / 2);
}

.c4::before {
  content: '';
  display: block;
  background: black;
  height: calc(1em / 16);
  width: 1em;
  -webkit-transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
  -ms-transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
  transform: translateY(calc(-4 * 1em / 16)) scaleX(1.35);
}

.c4::after {
  content: '';
  display: block;
  background: black;
  height: calc(1em / 16);
  width: 1em;
  -webkit-transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
  -ms-transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
  transform: translateY(calc(3 * 1em / 16)) scaleX(0.51);
}

.c6 {
  color: black;
}

.c8 {
  margin: 0 0.5em;
  font-size: 0.5em;
  color: black;
  -webkit-transition: -webkit-transform 0.5s ease;
  -webkit-transition: transform 0.5s ease;
  transition: transform 0.5s ease;
  -webkit-transform: scaleX(2);
  -ms-transform: scaleX(2);
  transform: scaleX(2);
}

.c1 {
  width: 100%;
  font: inherit;
  background: magenta;
  padding: 8px 16px;
  border: 0;
}

.c1:hover {
  cursor: pointer;
}

.c9 {
  overflow-y: hidden;
  width: 100%;
  -webkit-transition: max-height 0.5s ease;
  transition: max-height 0.5s ease;
  max-height: 0px;
}

.c10 {
  position: relative;
  width: 100%;
}

.c11 {
  min-height: 500px;
  background: cyan;
}

<div
  className="c0"
  width="300px"
>
  <button
    className="c1"
    color="black"
    onClick={[Function]}
    title="FILTER"
  >
    <div
      className="c2"
      rows={
        [
          "auto",
        ]
      }
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="black"
        />
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
          color="black"
        >
          FILTER
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
          color="black"
        >
          ▼
        </div>
      </div>
    </div>
  </button>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <div
        className="c11"
      />
    </div>
  </div>
</div>
`;
